Added new memory settings for Windows users, that way there are less crashes for Windows folks.